--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,11 @@
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 50px;
-  padding: 50px;
+  grid-gap: 85px;
+  padding: 85px;
   font-size: calc(10px + 2vmin);
   color: white;
+  justify-content: center;
 }
 
 .App-link {
