--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -1,3 +1,9 @@
+@media all and (max-width: 500px) {
+    .card-list {
+        flex-direction: column;
+    }
+}
+
 .cards-list {
     z-index: 0;
     width: 100%;
@@ -11,29 +17,58 @@
 }
 
 .card .card_image img {
-    /*width: 100%;*/
-    height: 100%;
+    z-index: 0;
     object-fit: cover;
     border-radius: 20px;
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
     cursor: pointer;
     transition: 0.4s;
     overflow: hidden;
+    height: auto;
+    width: auto;
+    max-width: 300px;
+    max-height: 300px;
 }
 
-.card_image {
-
+img:hover {
+    transform: scale(0.97, 0.97);
+    box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.25),
+    -2px -2px -15px -4px rgba(0, 0, 0, 0.22);
 }
 
-.card .card_image img:hover {
+.container {
+    position: relative;
+    width: 100%;
+    height: fit-content;
+}
+
+.container button {
+    opacity: 0;
+    border-radius: 20px;
+    width: 90px;
+    height: 30px;
+    background: rgba(0, 0, 0, .3);
+    position: absolute;
+    top: 4%;
+    left: 50%;
+    color: white;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+
+/*.container button:hover {*/
+/*    transform: scale(0.9, 0.9);*/
+/*}*/
+
+button:hover .card_image {
     transform: scale(0.9, 0.9);
     box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.25),
     -2px -2px -15px -4px rgba(0, 0, 0, 0.22);
 }
 
-@media all and (max-width: 500px) {
-    .card-list {
-        flex-direction: column;
-    }
+.card_image:hover button {
+    opacity: 1;
+    transition: opacity .3s;
 }
-
