--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,59 @@
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 5.5vw;
-  padding: 5.5vw;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  justify-content: center;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 5.5vw;
+    padding: 5.5vw;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+@media (max-width: 1400px) {
+    .App-header {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 1150px) {
+  .App-header {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 750px) {
+  .App-header {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5.5vw;
+    padding: 6.5vw;
+  }
+}
+
+@media (max-width: 360px) {
+  .App-header {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10vw;
+    padding: 10vw;
+  }
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
