--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App-header {
-    background-color: #282c34;
+    background-color: #1D1E33;
     min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
