--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -7,7 +7,8 @@ img {
     z-index: 0;
     object-fit: cover;
     border-radius: 20px;
-    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.22), -5px -5px 30px 7px rgba(0, 0, 0, 0.18);
+    /*box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);*/
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     cursor: pointer;
     transition: 0.4s;
     height: 300px;
